# UniStar

./: .gitignore  Android1.androidproj  Android1.slnx  README.md  tor.cpp
app/: CMakeLists.txt
app/src/main/java/com/Android1/: Android1.java
app/src/main/jniLibs/include/: tor_api.h
